# telemetry_rx

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  toolchain.cmake  updated_dash  upload.py
config/: influx_entrypoint.sh  init.sh  ngrok.yml
libs/: parse-features.py  parsed-features.txt  qt-features.txt
scripts/: 00_compile.ps1  01_flash.ps1  convert_to_csv.py  upload.py
src/: helper.cpp  helper.h  main.cpp  main.h  main.qml  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  speedometer.cpp  speedometer.h
src/adapters/: test_can.py  test_usb.py
src/config/: basic.json
src/mada/: CMakeLists.txt  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  speedometer.cpp  speedometer.h
src/mada/merge/: main.cpp  mainwindow.cpp  mainwindow.h  speedometer.cpp
src/plug&play/: CMakeLists.txt  main.cpp
src/plug&play/helper/: database.cpp  database.hpp  listener.cpp  listener.hpp
src/telemetry_rx/: __init__.py  main.py
src/telemetry_rx/adapters/: __init__.py  adapter.py  tcp_adapter.py  usb_adapter.py
src/telemetry_rx/classes/: __init__.py
src/telemetry_rx/cli/: __init__.py  listen.py
src/telemetry_rx/config/: Solis-EV4.dbc  basic.json  solis_ev4.dbc
src/telemetry_rx/utils/: __init__.py  context.py  state.py
src/xbee/: upload.py
src_rx/: main.py  requirements.txt
src_rx/adapters/: can.py  dev_can.py  dev_usb.py  test_can.py  test_usb.py  usb.py
src_rx/classes/: can.py  config.py  message.py  meta.py  parser.py
src_rx/config/: basic.json  config_template.ini
src_rx/helpers/: meta.py  paterns.py  patterns.py
src_tx/: .project  CAN_Tranciever.ioc
src_tx/Core/Inc/: stm32f1xx_it.h
src_tx/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
telemetry_rx/: __main__.py
telemetry_rx/adapters/: __init__.py  adapter.py  tcp_adapter.py  udp_adapter.py  usb_adapter.py
telemetry_rx/classes/: __init__.py  state.py
telemetry_rx/cli/: __init__.py  listen.py  parse.py  run.py  run_udp.py  run_usart.py
telemetry_rx/config/: Solis-EV4.dbc  solis_ev4.dbc
telemetry_rx/utils/: __init__.py  influx_credentials.py
templates/: bmu.json  bmu_errors.json  dash_2.0.json  mc.json  mc_errors.json  mc_errors_2.json  mppt_errors.json  power_consumption.json
tests/: XBeeTest3.py  serial_mock.py  test_adapter.py  test_udp_adapter.py  test_usb_adapter.py
tests/DataFiles/Session_1/: Sensor_0x210_1.txt  Sensor_0x406_1.txt  Sensor_0x40E_1.txt
tests/DataFiles/Session_2/: Sensor_0x200_1.txt  Sensor_0x6F4_1.txt  Sensor_0x6FA_1.txt
tests/serial_input/Session_1/: Sensor_0x200_1.txt  Sensor_0x402_1.txt  Sensor_0x403_1.txt  Sensor_0x405_1.txt  Sensor_0x6F4_1.txt  Sensor_0x6FA_1.txt
tests/serial_input/Session_2/: Sensor_0x210_1.txt  Sensor_0x402_1.txt  Sensor_0x403_1.txt  Sensor_0x405_1.txt  Sensor_0x406_1.txt  Sensor_0x40E_1.txt
