[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetry_rx"
dynamic = ["version"]
description = "Escort vehicle telemetry reciever, with support for USART & TCP/IP adapters."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Vorobiov Mihail", email = "mihail.vorobiov@gmail.com" }]
keywords = ["telemetry", "solis"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "cantools~=39.4.0",
  "click~=8.1.0",
  "crc~=7.0.0",
  "influxdb-client[ciso]~=1.44.0",
  "pyserial==3.5",
]

[project.urls]
Documentation = "https://github.com/VorobiovM/telemetry_rx"

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[project.scripts]
tool = "telemetry_rx.__main__:main"

[tool.hatch.version]
path = "telemetry_rx/version.py"

[tool.hatch.build]
directory = "dist/"

[tool.hatch.build.targets.wheel]
include = ["telemetry_rx"]
exclude = ["tests"]

[tool.hatch.build.targets.sdist]
include = ["telemetry_rx", "tests"]
exclude = ["tests/serial_input"]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
run = "pytest"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 130
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--import-mode=importlib"]
pythonpath = ["telemetry_rx"]
testpaths = ["tests"]
